# warprec

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODEOWNERS  Documentation Instructions BAK.md  Documentation Instructions.md  Example.md  Paper.md  Post-documentation notes.md  Prompt Generator.md  README.md  custom_pipeline.py  environment.cpu.yml  environment.gpu.yml  environment.yml  file.py  gsasrec2.out  gsasrec_jpq.out  infer.py  inference_best_combo_val_to_test.py  inference_generic.py  inference_user_best_ndcg40_validation.py  inference_validation_grid.py  lastfm_bertjpq_gts.out  lastfm_bertsas.out  makefile  nohup.out  nohup2.out  nohup3.out  nohup4.out  nohup5.out  nohup6.out  nohup8.out  proxy_evaluation.py  pyproject.toml  quantization.py  requirements.txt  sasjpq_gts.out  test_score_sequence.py  (+1 more)
.github/actions/setup-env/: action.yml
.github/workflows/: pr_linting.yml  pre_commit.yml  release.yml  sync_to_bitbucket.yml
analysis/: analysis1.py  computer_user_metric_by_alpha_beta.py  dataset_analysis.py  prepare_dataset.py
callbacks/: my_callback.py  stash_callback.py
config/: design_config.yml  full_config.yml  gsasrec_legacy_split_raw.yml  gsasrecjpq_legacy_split_raw.yml  infer_config.yml  personalized_mostpop_lastfm1k_legacy_split_raw.yml  quick_start.yml  sequential_config.yml  sequential_legacy_split.yml  sequential_legacy_split_raw.yml  sequential_legacy_split_raw_jpq.yml  sequential_legacy_split_raw_jpq_sampled_1.yml  sequential_legacy_split_raw_sasjpq.yml  sequential_yandex_legacy_split_raw.yml  sequential_yandex_legacy_split_raw_jpq.yml  sigir26_movielens-1m-parallel.yml  sigir26_movielens-1m.yml  sigir26_movielens-32m-parallel.yml  sigir26_movielens-32m.yml  sigir26_netflix-prize-100m.yml  sigir26_yelp-7m-parallel.yml  sigir26_yelp-7m.yml  split_infer_config.yml  split_train_config.yml  train_config.yml
config/parallel/: movielens-1m-lightgcn.yml  movielens-1m-neumf.yml  movielens-1m-sasrec.yml  movielens-32m-lightgcn.yml  movielens-32m-neumf.yml  movielens-32m-sasrec.yml  netflix-100m-lightgcn.yml  netflix-100m-neumf.yml  netflix-100m-sasrec.yml
config/serial/: movielens-1m-ease.yml  movielens-1m-lightgcn.yml  movielens-1m-neumf.yml  movielens-1m-sasrec.yml  movielens-32m-ease.yml  movielens-32m-lightgcn.yml  movielens-32m-neumf.yml  movielens-32m-sasrec.yml  netflix-100m-ease.yml  netflix-100m-itemknn.yml  netflix-100m-lightgcn.yml  netflix-100m-neumf.yml  netflix-100m-sasrec.yml
custom_models/: __init__.py
custom_models/centroid_assignment_strategies/: centroid_strategy.py  custom_discretizer.py  svd_strategy.py
custom_models/recjpq/: bertjpq.py  rec_jpq_layer.py  sequential_recsys_model.py
docs/: mkdocs.yml  requirements.txt
docs/docs/: index.md
docs/docs/api-reference/: index.md
docs/docs/cloud/: cluster-management.md
docs/docs/configuration/: dashboard.md  estimate.md  evaluation.md  general.md  index.md  models.md  reader.md  writer.md
docs/docs/evaluation/: index.md  (+1 more)
docs/source/: architecture.rst  conf.py  index.rst  install.rst  introduction.rst  quick-start.rst
docs_test/: mkdocs.yml
docs_test/docs/: index.md
elliotwo/: __init__.py  infer.py  test.py  train.py
elliotwo/data/: __init__.py
elliotwo/evaluation/: __init__.py  base_metric.py  evaluator.py  metrics.py
elliotwo/recommenders/: __init__.py  abstract_recommender.py  base_recommender.py  layers.py  similarities.py
elliotwo/utils/: __init__.py  dataclasses.py  enums.py  ray_utils.py  registry.py
env/: __init__.py  setup.py
hooks/: conda_env.py  update_env_files.py
infer-api/: mcp_server.py  server.py
infer-api/src/: __init__.py  utils.py
sample_pipelines/: custom_pipeline.py
scripts/: build_lastfm1k_legacy_dataset.py  build_legacy_global_temporal_split.py  build_yandex_legacy_dataset.py  calculate_timestamp_slices.py  fingerprint_lastfm_legacy_dataset.py
serving/: README.md  serving_config.yml
serving/common/: __init__.py  config.py  inference.py  model_manager.py
serving/mcp/: README.md  mcp_server.py
serving/restAPI/: README.md  server.py
warprec/: design.py  infer.py  run.py  train.py
warprec/common/: __init__.py  initialize.py  std_logs.py
warprec/data/: README.md  __init__.py  dataset.py  eval_loaders.py  filtering.py
warprec/evaluation/: README.md  __init__.py  base_metric.py  evaluator.py  statistical_significance.py
warprec/pipelines/: __init__.py  design.py  estimate.py  eval.py  swarm.py  train.py
warprec/recommenders/: README.md  __init__.py  base_recommender.py  callbacks.py  layers.py  loops.py  losses.py  lr_scheduler_wrapper.py  optimizer_wrapper.py  proxy.py  similarities.py
warprec/utils/: README.md  __init__.py  callback.py  enums.py  helpers.py  quantizer.py  registry.py
warprec_recjpq/: __init__.py  bert4rec_jpq.py  bertjpqmix.py  gsasrecjpq.py  gsasrecjpqmix.py  model_config.py  positional_encodings.py  rec_jpq_combination.py  rec_jpq_layer.py  sasrec_jpq.py  sasrecjpqmix.py  split_actions.py
warprec_recjpq/bertjpq/: bert4rec_jpq.py  bert4recjpq_pps.py
warprec_recjpq/centroid_assignment_strategies/: __init__.py  centroid_strategy.py  custom_discretizer.py  svd_strategy.py
(+510 files in other folders)
