[tool.poetry]
name = "elliotwo"
version = "0.1.0"
description = ""
authors = ["JTOVS <joseph.trotta@ovs.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12 <3.13"
pandas = "^2.2.3"
scipy = "^1.15.1"
numpy = "^2.2.2"
pydantic = "^2.10.6"
torch = "^2.6.0"
tabulate = "^0.9.0"
scikit-learn = "^1.6.1"
hyperopt = "^0.2.7"
ray = {extras = ["data", "serve", "train", "tune"], version = "^2.42.1"}
types-pyyaml = "^6.0.12.20241230"
types-tabulate = "^0.9.0.20241207"
loguru = "^0.7.3"
torchmetrics = "^1.6.2"
tensorboard = "^2.19.0"
tensorboardx = "^2.6.2.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
pytest = "^8.3.4"
ruff = "^0.9.3"
pydoclint = "^0.6.0"
mypy = "^1.14.1"
pylint = "^3.3.3"
bandit = "^1.8.2"
nvitop = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
