[tool.poetry]
name = "warprec"
version = "0.1.0"
description = ""
authors = [
    "MarcoWV <marco.avolio@wideverse.com>",
    "potitoaghilar <potito.aghilar@wideverse.com>",
    "SabeeenoGH <sabino.roccotelli@wideverse.com>",
    "vitowalteranelli <vitowalter.anelli@poliba.it>",
    "JTOVS <joseph.trotta@ovs.it>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
pandas = "^2.2.3"
scipy = "^1.15.1"
numpy = "^2.2.2"
pydantic = "^2.10.6"
tabulate = "^0.9.0"
scikit-learn = "^1.6.1"
hyperopt = "^0.2.7"
ray = {extras = ["data", "serve", "train", "tune"], version = "~2.45"}
types-pyyaml = "^6.0.12.20241230"
types-tabulate = "^0.9.0.20241207"
loguru = "^0.7.3"
tensorboard = "^2.19.0"
tensorboardx = "^2.6.2.2"
torch = "~2.7"
torchmetrics = "^1.8.2"
optuna = "^4.5.0"
polars = "^1.36"
narwhals = "^2.15.0"
wandb = {version = "^0.19.10", optional = true}
codecarbon = {version = "^3.0.0", optional = true}
mlflow = {version = "^2.22.0", optional = true}
azure-storage-blob = {version = "^12.26.0", optional = true}
azure-identity = {version = "^1.25.1", optional = true}
torch-scatter = {version = "*", optional = true}
torch-sparse = {version = "*", optional = true}
torch-geometric = {version = "*", optional = true}


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
pytest = "^8.3.4"
ruff = "^0.9.3"
pydoclint = "^0.6.0"
mypy = "^1.14.1"
pylint = "^3.3.3"
bandit = "^1.8.2"
nvitop = "^1.4.2"
matplotlib = "^3.10.3"


[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"


[tool.poetry.extras]
graph = [
    "torch-scatter",
    "torch-sparse",
    "torch-geometric",
]
dashboard = [
    "wandb",
    "codecarbon",
    "mlflow",
]
remote-io = [
    "azure-storage-blob",
    "azure-identity",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
